--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>arjunbhadra.com</title>
 
     <!--bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--fonts and icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
-  <body>
-      <h1>Hello World</h1>
+  <body class="bg-light">
+    <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2" style="width: 40rem;">
+      <h5 class="font-weight-light">
+        <i class="bi bi-globe p-1"></i> arjunbhadra.com
+      </h5>
+    </div>
+    <div class="card border-secondary text-center mx-auto d-block mt-3" style="width: 40rem;">
+      <img class="card-img-top" src="res/imgs/fall10x8.jpg" alt="Fall colors by Arjun Bhadra">
+      <div class="card-body">
+        <h5 class="font-weight-light">Hello World!</h5>
+        <br>
+        <span class="font-weight-light">
+          <h2>
+            <a href="https://www.linkedin.com/in/arjunbhadra/">
+              <i class="bi bi-linkedin p-2"></i>
+            </a>
+            <a href="https://github.com/addb" style="color: #000000">
+              <i class="bi bi-github p-2"></i>
+            </a>
+          </h2>
+        </span>
+      </div>
+    </div>
+
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
