Add css to make the web page responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
 
     <title>arjunbhadra.com</title>
 
@@ -13,12 +14,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
   <body class="bg-light">
-    <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2" style="width: 40rem;">
+    <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2 main-card-class">
       <h5 class="font-weight-light">
         <i class="bi bi-globe p-1"></i> arjunbhadra.com
       </h5>
     </div>
-    <div class="card border-secondary text-center mx-auto d-block mt-3" style="width: 40rem;">
+    <div class="card border-secondary text-center mx-auto d-block mt-3 main-card-class">
       <img class="card-img-top" src="res/imgs/fall10x8.jpg" alt="Fall colors by Arjun Bhadra">
       <div class="card-body">
         <h5 class="font-weight-light">Hello World!</h5>
