--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br>
         <span class="font-weight-light">
           <h2>
-            <a href="https://www.linkedin.com/in/arjunbhadra/">
+            <a href="https://www.linkedin.com/in/arjunbhadra/" style="color: #0072b1;">
               <i class="bi bi-linkedin p-2"></i>
             </a>
             <a href="https://github.com/addb" style="color: #000000">
