Added logic to show hero images randomly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <title>arjunbhadra.com</title>
 
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--fonts and icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="scripts/randomImgLoader.js"></script>
   </head>
   <body class="bg-light">
     <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2 main-card-class">
@@ -20,10 +21,12 @@
       </h5>
     </div>
     <div class="card border-secondary text-center mx-auto d-block mt-3 main-card-class">
-      <img class="card-img-top" src="res/imgs/fall10x8.jpg" alt="Fall colors by Arjun Bhadra">
+      <!-- Random photo will added by the script-->
+      <img id="hero-img" class="card-img-top" alt="Photo by Arjun Bhadra">
       <div class="card-body">
         <h5 class="font-weight-light">Hello World!</h5>
         <br>
+        <!--Social icons-->
         <span class="font-weight-light">
           <h2>
             <a href="https://www.linkedin.com/in/arjunbhadra/" style="color: #0072b1;">
