--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--fonts and icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="scripts/randomImgLoader.js"></script>
+    <script>
+      window.onload = displayRandomHeroImage;
+    </script>
   </head>
   <body class="bg-light">
     <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2 main-card-class">
