Updated functions to display random hero images

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <!--fonts and icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="scripts/randomImgLoader.js"></script>
-    <script>
-      window.onload = displayRandomHeroImage;
-    </script>
+
   </head>
   <body class="bg-light">
     <div class=" card  bg-dark text-white border-secondary text-center mx-auto d-block mt-4 p-2 main-card-class">
@@ -25,7 +23,7 @@
     </div>
     <div class="card border-secondary text-center mx-auto d-block mt-3 main-card-class">
       <!-- Random photo will added by the script-->
-      <img id="hero-img" class="card-img-top" alt="Photo by Arjun Bhadra">
+      <img id="hero-img" class="card-img-top" src="" alt="Photo by Arjun Bhadra">
       <div class="card-body">
         <h5 class="font-weight-light">Hello World!</h5>
         <br>
